--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -2,7 +2,7 @@
   <div class="inner">
     <div class="prototype__wrapper">
       <p class="prototype__hedding">
-        <%= "プロトタイプのタイトル"%>
+        <%= @prototype.title %>
       </p>
       <%= link_to "by#{@prototype.user.name}", user_path(@prototype.user_id), class: :prototype__user %>
       <%# プロトタイプの投稿者とログインしているユーザーが同じであれば以下を表示する %>
@@ -14,7 +14,6 @@
       <%# // プロトタイプの投稿者とログインしているユーザーが同じであれば上記を表示する %>
       <% end %>
       <div class="prototype__image">
-        <%=  "プロトタイプの画像" %>
         <%= image_tag @prototype.image.variant(resize: '500x500'), class: 'prototype-image' if @prototype.image.attached? %>
       </div>
       <div class="prototype__body">
